--- a/src/app/components/sales/deposits/deposits.component.html
+++ b/src/app/components/sales/deposits/deposits.component.html
@@ -8,8 +8,8 @@
                 </div>
                 <div class="card-body">
                     <div class="custom-datatable">
-                        <input type='text' class="filter-ngx form-control" placeholder='Search...'
-                            (keyup)='updateFilter($event)' />
+                        <!-- <input type='text' class="filter-ngx form-control" placeholder='Search...'
+                            (keyup)='updateFilter($event)' /> -->
                             
                         <select name="ordersFilter" (change)="filterOrders($event.target.value)">
                             <option>All orders</option>
