--- a/src/app/components/sales/manage-orders/manage-orders.component.html
+++ b/src/app/components/sales/manage-orders/manage-orders.component.html
@@ -1,5 +1,5 @@
 <!-- Container-fluid starts-->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
             <div class="card">
@@ -10,7 +10,7 @@
                     <div class="custom-datatable">
                         <input type='text' class="filter-ngx form-control" placeholder='Search...'
                             (keyup)='updateFilter($event)' />
-                            <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
+                            <button class="pull-right btn btn-warning" >Download</button><br><br>
                        
                         <select name="ordersFilter" (change)="filterOrders($event.target.value)">
                             <option>All orders</option>
@@ -51,10 +51,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Container-fluid Ends-->
 
-   <ng-template class="order-details" #orderDetails let-c="close" let-d="dismiss">
+   <!-- <ng-template class="order-details" #orderDetails let-c="close" let-d="dismiss">
         <div class="modal-header text-center">
           <h4 class="col-12 modal-title text-center" id="modal-basic-title">Order details</h4>
           <button type="button" class="close" aria-label="Close" (click)="d()">
@@ -220,4 +220,4 @@
                 </ngb-tab>
             </ngb-tabset>
         </div>
-    </ng-template>
+    </ng-template> -->
