--- a/src/app/components/sales/user-requests/user-requests.component.html
+++ b/src/app/components/sales/user-requests/user-requests.component.html
@@ -230,7 +230,7 @@
                   </table>
                 </div>   
                 <div class="col-9">
-                    <ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next"></ngb-datepicker><br><br>     
+                    <!-- <ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next"></ngb-datepicker><br><br>      -->
                 </div>
                 <hr>
               <div class="col pull-right">
