--- a/src/app/components/products/digital/digital-list/digital-list.component.html
+++ b/src/app/components/products/digital/digital-list/digital-list.component.html
@@ -7,14 +7,25 @@
                 </div>
                 <div class="card-body">
                     <div id="batchDelete" class="custom-datatable">
-                        <select name="ordersFilter" (change)="filterproducts($event.target.value)">
-                            <option>All products</option>
-                            <option>Laptops</option>
-                            <option>Desktops</option>
-                            <option>Camera</option>
-                        </select>
-                        <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button>
-                        <a class="pull-right btn btn-warning mr-2 mb-2" [routerLink]="'/products/digital/digital-add-product'"> Add product</a>
+                        <div class="row">
+                            <div class="col-3">
+                                <select name="ordersFilter" class="form-control" (change)="filterproducts($event.target.value)">
+                                    <option value='All'>All products</option>
+                                    <option *ngFor="let c of categories" value="{{c.cat_id}}">{{c.cat_name}}</option>
+                                </select>                                
+                            </div>
+                            <div class="col-4">
+                                <input type='text' class="filter-ngx form-control w-100" placeholder='Search...'
+                            (keyup)='updateFilter($event)' />
+                            </div>
+                            
+                            <div class="col-3">                                
+                                <a class="pull-right btn btn-warning mr-2 mb-2" [routerLink]="'/products/digital/digital-add-product'"> Add product</a>
+                            </div>
+                            <div class="col-2">
+                                <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button>
+                            </div>
+                        </div>
                         <div class="table-responsive">
                             <!-- <ng2-smart-table [settings]="settings" [source]="productsList" (editConfirm)="onEdit(row.prod_id)" (deleteConfirm)="onDelete(row.prod_id)"></ng2-smart-table> -->
                             <table class="table table-striped table-bordered">
