--- a/src/app/components/sales/orders/orders.component.html
+++ b/src/app/components/sales/orders/orders.component.html
@@ -56,7 +56,7 @@
                             <tr [routerLink]="[o.id]">
                               <td>{{o.primary_id}}</td>
                               <td>{{o.order_type}}</td>
-                              <td>{{o.createdAt | date:'dd MM yyyy'}}</td> 
+                              <td>{{o.createdAt | date:'dd-MMM-yyyy HH:mm'}}</td> 
                               <td>{{o.firstName}}</td> 
                               <td>₹ {{o.grandTotal}}</td>  
                               <td>{{o.paymentStatus}}</td> 
