--- a/src/app/components/users/customers/customers.component.html
+++ b/src/app/components/users/customers/customers.component.html
@@ -1,23 +1,198 @@
 <!-- Container-fluid starts-->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-4">
+          <div class="col-sm-6">
+              <div class="card">
+                  <div class="card-body">
+                      <div class="custom-datatable" *ngFor="let o of filteredCustomers">
+                          
+                          <p>Customer #: <span>{{o.customer_id}}</span></p>
+                          <p>First name : <span>{{o.firstName}}</span></p>
+                          <p>Last name : <span>{{o.lastName}}</span></p>
+                          <p>Mobile : <span>{{o.mobile}}</span></p>
+                          <p>Email : <span>{{o.email}}</span></p>
+                    
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-sm-6">
             <div class="card">
                 <div class="card-body">
-                    <div class="custom-datatable" *ngFor="let o of filteredCustomers">
+                    <div class="custom-datatable" *ngFor="let a of defaultAddress">
                         
-                        <p>Customer #: <span>{{o.customer_id}}</span></p>
-                        <p>First name : <span>{{o.firstName}}</span></p>
-                        <p>Last name : <span>{{o.lastName}}</span></p>
-                        <p>Mobile : <span>{{o.mobile}}</span></p>
-                        <p>Email : <span>{{o.email}}</span></p>
-                  
+                        <p>Name : <span>{{a.display_name}} ({{a.nickName}})</span></p>
+                        <p>First name : <span>{{a.firstName}}</span></p>
+                        <p>Address : <span>{{a.address_line1}} {{a.address_line2}}, {{a.landmark}}, {{a.city}}-{{a.pincode}}</span></p>
+                        <p>Landmark : <span></span></p>
+                        <p>Mobile : <span>{{a.addressMobile}}</span></p>
+                        <p>Email : <span>{{a.email}}</span></p>
+                        <a class="text-primary" (click)="open()">click here to view all address</a>
                     </div>
                 </div>
             </div>
+          </div>
+
+          <div class="col-sm-12">
+            <div class="card">
+              <div class="card-header">
+                  <h3>Cart details</h3>
+              </div>
+                <div class="card-body">
+                    <ng-multiselect-dropdown class="mx-5"
+                        [placeholder]="'Add products'"
+                        [settings]="dropdownSettings"
+                        [data]="cartProducts"
+                        (onSelect)="onItemSelect($event)"
+                        (onDeSelect)="onItemDeSelect($event)"
+                        >
+                    </ng-multiselect-dropdown>
+                    <div class="custom-datatable">                        
+                        <table class="table table-striped table-bordered" >
+                          <thead>
+                            <tr>
+                              <th>Product Id</th>
+                              <th>Product name</th>
+                              <th>securityDeposit</th>
+                              <th>Quantity</th>
+                              <th>Tenure period</th>
+                              <th>Tenure price</th>
+                              <th>Action</th>
+                            </tr>
+                          </thead>
+                          <tbody >
+                            <tr *ngFor="let c of cartDetails">
+                              <td>{{c.product_id}}</td>
+                              <td>{{c.prod_name}}</td>
+                              <td>{{c.securityDeposit}}</td> 
+                              <td>{{c.quantity}}</td>  
+                              <td>{{c.tenures}}</td> 
+                              <td>{{c.tenure_price}}</td>
+                              <td><a><i class="fa fa-trash"></i></a></td>                    
+                            </tr>                          
+                          </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <div class="card">
+                <div class="card-header">
+                   <h3>Order details</h3>
+                </div>
+                <div class="card-body">
+                    <div class="custom-datatable">                        
+                        <table class="table table-striped table-bordered" >
+                          <thead>
+                            <tr>
+                              <th>Order Id</th>
+                              <th>Order type</th>
+                              <th>Order date</th>
+                              <th>Invoice value</th>
+                              <th>Payment status</th>
+                              <th>Delivery status</th>
+                              <th>Order status</th>
+                            </tr>
+                          </thead>
+                          <tbody *ngFor="let o of orders">
+                            <tr [routerLink]="['../../../sales/orders',o.id]">
+                              <td>{{o.primary_id}}</td>
+                              <td>{{o.order_type}}</td>
+                              <td>{{o.createdAt | date:'dd MM yyyy'}}</td> 
+                              <td>₹ {{o.grandTotal}}</td>  
+                              <td>{{o.paymentStatus}}</td> 
+                              <td>{{o.delivery_status}}</td>  
+                              <td *ngIf="o.orderStatusId==0" class="text-center"><i class="fa fa-circle text-danger"></i></td>  
+                              <td *ngIf="o.orderStatusId==1" class="text-center"><i class="fa fa-circle text-success"></i></td>                     
+                            </tr>                          
+                          </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+          </div>
+        <div class="col-sm-12">
+          <div class="card">
+              <div class="card-body">
+                  <div class="custom-datatable">
+                      
+                    <table class="table table-striped table-bordered" >
+                      <thead>
+                        <tr>
+                          <th>Product Id</th>
+                          <th>Product name</th>
+                          <th>Asset #</th>
+                          <th>Security deposit</th>
+                          <th>Tenure period</th>
+                          <th>Tenure price</th>
+                          <th>Damage protection</th>
+                          <th>Delivery status</th>
+                          <th>overdue</th>
+                          <th>Start date</th>
+                          <th>End date</th>
+                        </tr>
+                      </thead>
+                      <tbody *ngFor="let o of orderItems">
+                        <tr >
+                          <td>{{o.prod_id}}</td>
+                          <td>{{o.prod_name}}</td>
+                          <td>{{o.asset_id}}</td>
+                          <td>₹ {{o.security_deposit}}</td>  
+                          <td>{{o.tenure_period}}</td> 
+                          <td>{{o.tenure_price}}</td>  
+                          <td>{{o.damage_protection}}</td>  
+                          <td>{{o.delivery_status}}</td>
+                          <td *ngIf="o.overdue==0" class="text-center"><i class="fa fa-circle text-danger"></i></td>  
+                          <td *ngIf="o.overdue==1" class="text-center"><i class="fa fa-circle text-success"></i></td>                     
+                          <td>{{o.startDate | date:'dd MM yyyy'}}</td> 
+                          <td>{{o.endDate | date:'dd MM yyyy'}}</td> 
+                        </tr>                          
+                      </tbody>
+                    </table>
+                
+                  </div>
+              </div>
+          </div>
         </div>
-    </div>
-    <!-- Container-fluid Ends-->
+
+        
+      </div>
+</div> 
+    <!-- Container-fluid Ends -->
+
+
+        <!-- Replacement request modal -->
+        <ng-template  #addressModal let-c="close" let-d="dismiss">
+          <div class="modal-header text-center">
+            <h4 class="col-12 modal-title text-center" id="modal-basic-title">Order details</h4>
+            <button type="button" class="close" aria-label="Close" (click)="d(); ">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+              <div class="row">  
+                <div class="col-sm-6" *ngFor="let a of address">
+                  <div class="card">
+                      <div class="card-body">
+                          <div class="custom-datatable" >
+                              
+                              <p>Name : <span>{{a.display_name}} ({{a.nickName}})</span></p>
+                              <p>First name : <span>{{a.firstName}}</span></p>
+                              <p>Address : <span>{{a.address_line1}} {{a.address_line2}}, {{a.landmark}}, {{a.city}}-{{a.pincode}}</span></p>
+                              <p>Landmark : <span></span></p>
+                              <p>Mobile : <span>{{a.addressMobile}}</span></p>
+                              <p>Email : <span>{{a.email}}</span></p>
+                        
+                          </div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+      </ng-template>
 
     <!-- <ng-template #content let-c="close" let-d="dismiss">
         <div class="modal-header text-center">
@@ -58,7 +233,7 @@
             </form>
             </div>
         </div>
-    </ng-template> -->
+    </ng-template>
 
     <ng-template class="order-details" #orderDetails let-c="close" let-d="dismiss">
         <div class="modal-header text-center">
@@ -204,4 +379,4 @@
                 </div>
             </div>
         </div>
-    </ng-template>
+    </ng-template> -->
