--- a/src/app/components/users/list-user/list-user.component.html
+++ b/src/app/components/users/list-user/list-user.component.html
@@ -8,7 +8,7 @@
                         <input type='text' class="filter-ngx form-control" placeholder='Search...'
                             (keyup)='updateFilter($event)' />
                             <button class="pull-right btn btn-warning ml-2" [routerLink]="'/users/create-customer'" >Create customer</button>
-                            <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
+                            <button class="pull-right btn btn-warning" >Download</button><br><br>
 
                         
                         <table class="table table-striped table-bordered" >
@@ -19,6 +19,8 @@
                               <th>Last name</th>
                               <th>Mobile</th>
                               <th>Email</th>
+                              <th>Created time</th>
+                              <th>Last login</th>
                             </tr>
                           </thead>
                           <tbody *ngFor="let o of filteredCustomers">
@@ -27,7 +29,9 @@
                               <td>{{o.firstName}}</td>
                               <td>{{o.lastName}}</td>
                               <td>{{o.mobile}}</td>
-                              <td>{{o.email}}</td>                    
+                              <td>{{o.email}}</td>   
+                              <td>{{o.registeredAt | date:'dd-MMM-yyyy HH:mm'}}</td>  
+                              <td>{{o.lastLogin | date:'dd-MMM-yyyy HH:mm'}}</td>                 
                             </tr>                          
                           </tbody>
                         </table>
@@ -79,7 +83,7 @@
         </div>
     </ng-template> -->
 
-    <ng-template class="order-details" #orderDetails let-c="close" let-d="dismiss">
+    <!-- <ng-template class="order-details" #orderDetails let-c="close" let-d="dismiss">
         <div class="modal-header text-center">
           <h4 class="col-12 modal-title text-center" id="modal-basic-title">Order details</h4>
           <button type="button" class="close" aria-label="Close" (click)="d()">
@@ -223,4 +227,4 @@
                 </div>
             </div>
         </div>
-    </ng-template>
+    </ng-template> -->
